# minio_iceberg_duckdb

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
apps/: Dockerfile
apps/aggregate_trades/: README.md  main.py
apps/aggregate_trades/modules/: iceberg_client.py  iceberg_schemas.py
apps/aggregate_trades/properties/: conf.yaml
apps/trades_api/: README.md  main.py
apps/trades_api/modules/: __init__.py  server.py
apps/trades_api/modules/api_models/: __init__.py  model_auth.py  model_requests.py  model_response.py
apps/trades_api/modules/auth_routes/: __init__.py  auth_route.py
apps/trades_api/modules/middleware_helper/: access_endpoints.py  auth_middleware.py
apps/trades_api/modules/routes/: __init__.py  trades_input.py
apps/trades_api/modules/utils/: api_logger.py  ashing_utils.py  auth_ashing.py  iceberg_connect.py  mongo_connect.py
modules/: Dockerfile
